--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -56,7 +56,7 @@
             <tr>
                 <td>553507</td>
                 <td>Luis Alberto Rocha Filho</td>
-                <td>foto</td>
+                <td><img src="../assets/minha-foto.jpg" alt=""></td>
             </tr>
         </table>
     </main>
