--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="./src/styles/globalstyles.css">
     <link rel="stylesheet" href="./src/styles/header-nav.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -31,7 +32,13 @@
     </nav>
 
     <main>
-
+        <div class="video__container">
+            <iframe width="750" height="450" src="https://www.youtube.com/embed/m_McN6hzPOM?si=nWVnpFF1Khk7mbps" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <section>
+            <p class="section__paragraph--first">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error fugit nulla vero tenetur dignissimos, quisquam eaque consequuntur sed minus quam? Minima optio quibusdam omnis nostrum aperiam tempore. Obcaecati, assumenda. Fugiat.</p>
+            <p class="section__paragraph--second">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis officia error est quasi, repellendus enim possimus eum, ipsam voluptatem laudantium harum, numquam dolorem nam. Dolore quia voluptate labore quae odit!</p>
+        </section>
     </main>
 
     <script src="./src/js/index.js"></script>
