--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
     <main>
         <div class="video__container">
-            <iframe width="750" height="450" src="https://www.youtube.com/embed/m_McN6hzPOM?si=nWVnpFF1Khk7mbps" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/D6sJFvnkqcc?si=RPYRqV4Ab7GUwJS-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <section>
-            <p class="section__paragraph--first">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error fugit nulla vero tenetur dignissimos, quisquam eaque consequuntur sed minus quam? Minima optio quibusdam omnis nostrum aperiam tempore. Obcaecati, assumenda. Fugiat.</p>
-            <p class="section__paragraph--second">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis officia error est quasi, repellendus enim possimus eum, ipsam voluptatem laudantium harum, numquam dolorem nam. Dolore quia voluptate labore quae odit!</p>
+            <p class="section__paragraph--first">Para não esperarmos mais incontaveis horas nas fias de hospitais decidi realizar esse projeto para otimizar o tempo de espera.</p>
+            <p class="section__paragraph--second">O principal ponto do projeto é criar um ambiente de espera mais organizado e gerar dados para serem analisados para poder melhorar o atendimento.</p>
         </section>
     </main>
 
